--- a/NaiveBayes/NaiveBayes.vcxproj.filters
+++ b/NaiveBayes/NaiveBayes.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\Data.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\NaiveBayes.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Data.h">
